fixed overflow on navbar

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,8 @@ body{
     color: white;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
+    width: 16%;
+    font-size: 2vw;
 }
 .card{
     margin-top:1vw ;
